--- a/app/src/main/res/layout/promote_item.xml
+++ b/app/src/main/res/layout/promote_item.xml
@@ -40,7 +40,7 @@ android:layout_marginTop="5dp"
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:fontFamily="@font/orion"
         android:gravity="center"
         android:id="@+id/story_username"
         android:textColor="@color/black"
