--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -183,6 +183,7 @@
 
 
                     <com.orion.orion.util.SquareImageView
+                        android:background="@color/black"
                         android:id="@+id/post_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -348,8 +349,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/recyclerComment"/>
-
-
             </RelativeLayout>
 
 
