--- a/app/src/main/res/layout/layout_contest_item2.xml
+++ b/app/src/main/res/layout/layout_contest_item2.xml
@@ -7,12 +7,7 @@
     app:cardBackgroundColor="@color/white"
     app:cardElevation="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,28 +40,11 @@
         </RelativeLayout>
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:id="@+id/posterD"
-                android:src="@drawable/orion_logo_png_black"
                />
-
-    </LinearLayout>
-    </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:gravity="bottom"
-            android:layout_alignParentBottom="true"
-            android:layout_height="wrap_content">
-            <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-
-            android:orientation="vertical">
-
 
         <TextView
             android:layout_width="match_parent"
@@ -92,7 +70,8 @@
                 android:id="@+id/domain"
                 android:textSize="10sp"
                 android:textColor="@color/grey"
-                /> <TextView
+                />
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
@@ -102,11 +81,15 @@
             android:textColor="@color/black"
             />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center_horizontal"
 
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -114,19 +97,21 @@
                 android:id="@+id/entryfee"
                 android:textSize="10sp"
                 android:textColor="@color/grey"
-                /> <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:id="@+id/entryfeeD"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/entryfeeD"
                 android:layout_toRightOf="@+id/entryfee"
 
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            />
-            </RelativeLayout>
-            </LinearLayout>
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
 
-    </RelativeLayout>
-    </RelativeLayout>
+    </LinearLayout>
+
+
+
 </androidx.cardview.widget.CardView>
