--- a/app/src/main/res/layout/layout_contest_item2.xml
+++ b/app/src/main/res/layout/layout_contest_item2.xml
@@ -1,117 +1,122 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="5dp"
     app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardUseCompatPadding="true">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:padding="3dp"
+        android:orientation="vertical"
+        android:padding="3dp">
 
-        android:orientation="vertical">
+
+
         <RelativeLayout
+            android:id="@+id/rel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:text="100%"
-            android:textColor="#FFC107"
-            android:id="@+id/gp"
-            android:textSize="13sp"
-            android:layout_margin="2dp"
-
-            android:gravity="center"/>
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_eclipse"
-            android:layout_gravity="right"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/optionC"
-            android:layout_alignParentRight="true" />
-        </RelativeLayout>
 
             <ImageView
+                android:id="@+id/optionC"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_eclipse" />
+
+            <TextView
+                android:id="@+id/gp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_margin="2dp"
+                android:gravity="center"
+                android:text="100%"
+                android:textColor="#FFC107"
+                android:textSize="13sp" />
+
+        </RelativeLayout>
+
+
+            <ImageView
+                android:id="@+id/posterD"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/posterD"
+                android:scaleType="centerInside"
                />
 
+
         <TextView
+            android:id="@+id/titleD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="title"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/titleD"
+            android:text="title"
+            android:textColor="@color/black"
             android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            />
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Domain:  "
-                android:layout_gravity="center"
                 android:id="@+id/domain"
-                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Domain: "
                 android:textColor="@color/grey"
-                />
+                android:textSize="12sp" />
+
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:layout_gravity="center"
-            android:id="@+id/domainD"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            />
+                android:id="@+id/domainD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center_horizontal"
-
-            android:orientation="horizontal">
-
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Entry Fee:  "
                 android:id="@+id/entryfee"
-                android:textSize="10sp"
-                android:textColor="@color/grey"
-                />
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/entryfeeD"
-                android:layout_toRightOf="@+id/entryfee"
+                android:text="Entry Fee: "
+                android:textColor="@color/grey"
+                android:textSize="12sp" />
 
-                android:textSize="10sp"
+            <TextView
+                android:id="@+id/entryfeeD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/entryfee"
+                android:text=""
                 android:textColor="@color/black"
-                />
+                android:textSize="12sp" />
+
         </LinearLayout>
 
     </LinearLayout>
-
-
 
 </androidx.cardview.widget.CardView>
