--- a/app/src/main/res/layout/activity_post_video.xml
+++ b/app/src/main/res/layout/activity_post_video.xml
@@ -138,7 +138,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:visibility="invisible"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/black"
             app:cardCornerRadius="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
