--- a/app/src/main/res/layout/activity_joining_form.xml
+++ b/app/src/main/res/layout/activity_joining_form.xml
@@ -15,13 +15,13 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/relLayout"
         android:layout_below="@+id/reLayout1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -103,8 +103,9 @@
 
             </LinearLayout>
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="150dp"
                     android:layout_margin="5dp"
                     android:id="@+id/idIv"
                     android:visibility="gone"
@@ -174,13 +175,14 @@
 
 
             </LinearLayout>
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:id="@+id/submisionIv"
-                android:layout_gravity="center_horizontal"/>
 
+            <ImageView
+                android:id="@+id/submisionIv"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:maxHeight="150dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp" />
 
             <Button
                 android:layout_width="wrap_content"
