--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -1,41 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home.MainActivity">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/container">
 
-    </FrameLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/relLayoutParent">
-        <!--top toolbar    -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relLayout1">
-            <include layout="@layout/layout_top_tabs"/>
-
+            android:id="@+id/top"
+            android:background="@color/black"
+            android:layout_height="50dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ORION"
+                android:textSize="40sp"
+                android:gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/orion"
+                android:textColor="@color/colorAccent"/>
         </RelativeLayout>
-        <!--        middle section-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/top">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/container">
+
+        </FrameLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/relLayout2"
-            android:layout_below="@+id/relLayout1"
-            android:layout_above="@+id/bottom">
+            android:id="@+id/relLayoutParent">
+            <!--top toolbar    -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/relLayout1">
+                <include layout="@layout/layout_top_tabs"/>
 
-            <include layout="@layout/layout_center_viewpager" />
+
+            </RelativeLayout>
+            <!--        middle section-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/relLayout2"
+                android:layout_below="@+id/relLayout1"
+                android:layout_above="@+id/bottom">
+
+                <include layout="@layout/layout_center_viewpager" />
+            </RelativeLayout>
+            <!--    Bottom bar-->
+            <include layout="@layout/layout_bottom_navigation_view" />
         </RelativeLayout>
-        <!--    Bottom bar-->
-        <include layout="@layout/layout_bottom_navigation_view" />
+
     </RelativeLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
