--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<include layout="@layout/snippet_message_bar"/>
     <TextView
         android:id="@+id/msgRequest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:layout_below="@+id/top"
         android:gravity="end"
         android:text="Request(0)"
         android:textColor="@color/black"
