--- a/app/src/main/res/layout/activity_notification2.xml
+++ b/app/src/main/res/layout/activity_notification2.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
+    <include layout="@layout/snippet_notification_bar"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,8 +12,8 @@
         android:text="Clear all Notifications"
         android:id="@+id/clearNotification"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:textSize="16sp"
+        android:layout_below="@+id/top"
         android:textColor="#F44336"
         android:paddingTop="5dp"
         android:layout_marginBottom="8dp"
