--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     android:id="@+id/rootView">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <ProgressBar
         android:id="@+id/Registerrequestloadingprogressbar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -17,7 +19,10 @@
         android:indeterminate="true"
         android:padding="0dp"
         android:theme="@style/Widget.AppCompat.ProgressBar.Horizontal" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -162,9 +167,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
+        android:paddingTop="30dp"
         android:orientation="vertical"
        >
         <TextView
@@ -248,5 +253,6 @@
             android:id="@+id/link_login"
             android:textSize="14sp"/>
     </LinearLayout>
-
+</LinearLayout>
 </RelativeLayout>
+</ScrollView>
