--- a/app/src/main/res/layout/fragment_notification1.xml
+++ b/app/src/main/res/layout/fragment_notification1.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
-
+<include layout="@layout/snippet_notification_bar"/>
     <TextView
+        android:layout_below="@+id/top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Clear all Notifications"
         android:id="@+id/clearNotification"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:textSize="16sp"
         android:textColor="#F44336"
         android:paddingTop="5dp"
