--- a/app/src/main/res/layout/fragment_viewprofile.xml
+++ b/app/src/main/res/layout/fragment_viewprofile.xml
@@ -164,6 +164,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:orientation="vertical">
 
                             <TextView
@@ -623,6 +624,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="50dp"
 
+                android:visibility="gone"
                 android:background="@color/white"
                 android:gravity="center"
                 android:horizontalSpacing="1dp"
