--- a/app/src/main/res/layout/create_contest.xml
+++ b/app/src/main/res/layout/create_contest.xml
@@ -731,6 +731,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:paddingBottom="50dp"
             android:orientation="vertical">
 
             <!--Limited No. of participants window-->
