--- a/app/src/main/res/layout/snippet_account_setting_toolbar.xml
+++ b/app/src/main/res/layout/snippet_account_setting_toolbar.xml
@@ -3,7 +3,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/white_border">
+        android:background="@color/black">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/profileToolbar"
@@ -30,11 +30,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
                     android:text="Options"
-                    android:textColor="#000000" />
+                    android:textColor="@color/topColor"
+                    android:textAllCaps="true"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/orion"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="15dp" />
 
 
             </RelativeLayout>
