--- a/app/src/main/res/layout/snippet_message_bar.xml
+++ b/app/src/main/res/layout/snippet_message_bar.xml
@@ -27,7 +27,7 @@
                     android:fontFamily="@font/orion"
                     android:textAllCaps="true"
                     android:textSize="25sp"
-                    android:textColor="#f29492"
+                    android:textColor="@color/topColor"
                     />
 
 
