--- a/app/src/main/res/layout/snippet_top_contest_bar.xml
+++ b/app/src/main/res/layout/snippet_top_contest_bar.xml
@@ -3,7 +3,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/white_border"
+        android:background="@color/black"
         >
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -33,8 +33,11 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="Contest Details"
-                    android:textColor="#000000"
-                    android:layout_marginLeft="5dp"/>
+                    android:textColor="@color/topColor"
+                    android:textAllCaps="true"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/orion"
+                    android:layout_marginLeft="15dp"/>
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
