--- a/app/src/main/res/layout/snippet_top_msg_request.xml
+++ b/app/src/main/res/layout/snippet_top_msg_request.xml
@@ -3,7 +3,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/white_border"
+        android:background="@color/black"
         >
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -32,8 +32,11 @@
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:text="Message Request"
-                    android:textColor="#000000"
-                  />
+                    android:textColor="@color/topColor"
+                    android:textAllCaps="true"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/orion"
+                    android:layout_marginLeft="15dp"                  />
 
 
             </RelativeLayout>
