--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="scheme6">#ba5370</color>
     <color name="scheme7">#4ca1af</color>
     <color name="scheme9">#4f7fca</color>
+    <color name="topColor">#f29492</color>
 
 </resources>
