--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -22,7 +22,8 @@
 
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@color/black">
 
 
                     <RelativeLayout
@@ -47,7 +48,8 @@
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
                             android:text="Edit Profile"
-                            android:textColor="#000000" />
+                            android:textColor="@color/white"
+                            android:textStyle="bold"/>
 
                         <ImageView
                             android:id="@+id/saveChanges"
@@ -59,7 +61,8 @@
                             android:layout_marginLeft="10dp"
                             android:layout_marginEnd="20dp"
                             android:layout_marginRight="20dp"
-                            android:src="@drawable/ic_checkmark" />
+                            android:src="@drawable/ic_checkmark"
+                            app:tint="@color/white" />
 
 
                     </RelativeLayout>
@@ -133,7 +136,7 @@
                             android:layout_height="match_parent"
                             android:layout_centerVertical="true"
                             android:background="@drawable/rectangular_border"
-
+                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_."
                             android:hint="Username"
                             android:inputType="textNoSuggestions"
 
