--- a/app/src/main/res/layout/snippet_top_contest_ac_bar.xml
+++ b/app/src/main/res/layout/snippet_top_contest_ac_bar.xml
@@ -35,8 +35,10 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
                     android:text="Contest Details"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/orion"
+                    android:textAllCaps="true"
+                    android:textSize="25sp"
+                    android:textColor="@color/topColor"/>
 
                 <ImageView
                     android:id="@+id/optionC"
